Fix: password field is empty when editing lecture. Fix: Question not showing in radiobutton true/false questions.
Removed logged in info from lecture views menu

--- a/timApp/static/css/windowstyle.css
+++ b/timApp/static/css/windowstyle.css
@@ -121,8 +121,8 @@ input[type="number"] {
 }
 
 
-.createLecture input[type="text"], .createLecture input[type="date"], .createLecture select , .createQuestion input,
-.createQuestion textarea{
+.createLecture input[type="text"], .createLecture input[type="date"], .createLecture input[type="password"],
+.createLecture select , .createQuestion input, .createQuestion textarea{
     border: 1px solid #3cc;
     color: #505050;
     height: 20px;
